# chess

./: CMakeLists.txt  board.cpp  board.h  chess.pro  choosedlg.cpp  ctrlpanel.cpp  mainwnd.cpp  netgame.cpp  netgame.h  stone.cpp
